<resources>
    <string name="app_name">Мой МГТУ</string>

    <!-- Auth Screen -->
    <string name="authScreen_title">Вход</string>
    <string name="authScreen_loginField_placeholder">Имя пользователя</string>
    <string name="authScreen_passwordField_placeholder">Пароль</string>
    <string name="authScreen_submit_button">Войти</string>
    <string name="authScreen_invalidData_error_title">Что-то пошло не так</string>
    <string name="authScreen_invalidData_error_desc">Неверно введен логин или пароль</string>
    <string name="authScreen_error_desc">Ошибка загрузки данных</string>

    <!-- Hub Screen -->
    <string name="hubScreen_tab_home">Хаб</string>
    <string name="hubScreen_tab_chat">Чат</string>
    <string name="hubScreen_tab_profile">Профиль</string>

    <!-- Profile Screen -->
    <string name="profileScreen_tab_account">Аккаунт</string>
    <string name="profileScreen_tab_aboutMe">Обо мне</string>
    <string name="profileScreen_accountList_myGroup">Моя группа</string>
    <string name="profileScreen_accountList_myCourses">Мои курсы</string>
    <string name="profileScreen_accountList_myDebts">Мои долги</string>
    <string name="profileScreen_accountList_settings">Настройки</string>
</resources>
