<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?screenBackground">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_hub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_tab_home"
        />

    <TextView
        style="@style/Tab.Hub"
        android:id="@+id/textView_tab_home"
        android:layout_width="wrap_content"
        android:text="@string/hubScreen_tab_home"
        app:drawableTopCompat="@drawable/ic_home"
        android:layout_marginStart="27dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        style="@style/Tab.Hub"
        android:id="@+id/textView_tab_chat"
        android:layout_width="wrap_content"
        android:text="@string/hubScreen_tab_chat"
        app:drawableTopCompat="@drawable/ic_chat"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/textView_tab_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_tab_profile"
        />

    <TextView
        style="@style/Tab.Hub"
        android:id="@+id/textView_tab_profile"
        android:layout_width="wrap_content"
        android:text="@string/hubScreen_tab_profile"
        app:drawableTopCompat="@drawable/ic_profile"
        android:layout_marginEnd="27dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
